# streamdown

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.kiro/specs/streamdown/: design.md  requirements.md  tasks.md
src/streamdown/: __init__.py  __main__.py
src/streamdown/application/: __init__.py  chunk_worker.py  download_coordinator.py  download_manager.py  dtos.py  use_cases.py
src/streamdown/cli/: __init__.py  main.py  progress_display.py
src/streamdown/domain/: __init__.py  entities.py  enums.py  events.py  exceptions.py  services.py  value_objects.py
src/streamdown/infrastructure/: __init__.py  file_writer.py  http_client.py  logging.py  metadata_repository.py  netrc_provider.py
tests/: __init__.py  test_chunk_planner.py  test_chunk_worker.py  test_cli.py  test_download_coordinator.py  test_download_manager.py  test_entities.py  test_enums.py  test_exceptions.py  test_file_writer.py  test_http_client.py  test_integration.py  test_logging.py  test_logging_integration.py  test_memory_efficiency.py  test_metadata_repository.py  test_netrc_provider.py  test_progress_display.py  test_resume_policy.py  test_streaming_progress_updates.py  test_use_cases.py  test_value_objects.py
